feat: add WAN Miniport Manager window with SSTP service controls

--- a/DeviceMonitorCS/MainWindow.xaml
+++ b/DeviceMonitorCS/MainWindow.xaml
@@ -27,6 +27,8 @@
                 <Separator/>
                 <Button x:Name="NetworkAdaptersBtn" Content="Network Adapters" Margin="5"/>
                 <Separator/>
+                <Button x:Name="WanMiniportBtn" Content="WAN Miniports" Margin="5"/>
+                <Separator/>
                 <Button x:Name="ConnectionsBtn" Content="Connections" Margin="5"/>
             </ToolBar>
         </ToolBarTray>
